y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList main

   3  dList : decl dList
   4        |

   5  $$2 :

   6  decl : type $$2 Lid ';'

   7  $$3 :

   8  $$4 :

   9  decl : DECSTRUCT $$3 id '{' $$4 dListStruct '}' ';'

  10  $$5 :

  11  $$6 :

  12  $$7 :

  13  $$8 :

  14  $$9 :

  15  decl : FUNC type $$5 id '(' $$6 lparam ')' '{' $$7 corpoF RETURN exp $$8 ';' $$9 '}'

  16  $$10 :

  17  $$11 :

  18  $$12 :

  19  $$13 :

  20  decl : FUNC VOID $$10 id '(' $$11 lparam ')' '{' $$12 corpoF $$13 '}'

  21  Lid : Lid ',' id
  22      | id

  23  lparam : lparam ',' param
  24         | param
  25         |

  26  $$14 :

  27  param : type $$14 idP

  28  corpoF : corpoF listacmd
  29         | corpoF dListStruct
  30         |

  31  $$15 :

  32  dListStruct : dListStruct type $$15 LidL ';'

  33  $$16 :

  34  dListStruct : type $$16 LidL ';'

  35  LidL : LidL ',' idL
  36       | idL

  37  idL : IDENT

  38  idP : IDENT

  39  id : IDENT

  40  type : INT
  41       | DOUBLE
  42       | BOOL

  43  $$17 :

  44  main : VOID MAIN '(' ')' $$17 bloco

  45  bloco : '{' listacmd '}'

  46  listacmd : listacmd cmd
  47           |

  48  cmd : exp ';'
  49      | IF '(' exp ')' cmd

  50  exp : exp '+' exp
  51      | exp '>' exp
  52      | exp AND exp
  53      | NUM
  54      | '(' exp ')'
  55      | IDENT
  56      | exp '=' exp
  57      | exp '[' exp ']'

  58  $$18 :

  59  exp : STRUCT IDENT $$18 IDENT

  60  $$19 :

  61  exp : IDENT $$19 '.' IDENT

  62  $$20 :

  63  exp : IDENT '(' $$20 pexp ')'

  64  pexp : pexp ',' exp
  65       | exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList main  (2)
	dList : .  (4)

	INT  shift 3
	DOUBLE  shift 4
	BOOL  shift 5
	DECSTRUCT  shift 6
	FUNC  shift 7
	VOID  reduce 4

	type  goto 8
	dList  goto 9
	decl  goto 10


state 3
	type : INT .  (40)

	.  reduce 40


state 4
	type : DOUBLE .  (41)

	.  reduce 41


state 5
	type : BOOL .  (42)

	.  reduce 42


state 6
	decl : DECSTRUCT . $$3 id '{' $$4 dListStruct '}' ';'  (9)
	$$3 : .  (7)

	.  reduce 7

	$$3  goto 11


state 7
	decl : FUNC . type $$5 id '(' $$6 lparam ')' '{' $$7 corpoF RETURN exp $$8 ';' $$9 '}'  (15)
	decl : FUNC . VOID $$10 id '(' $$11 lparam ')' '{' $$12 corpoF $$13 '}'  (20)

	INT  shift 3
	DOUBLE  shift 4
	BOOL  shift 5
	VOID  shift 12
	.  error

	type  goto 13


state 8
	decl : type . $$2 Lid ';'  (6)
	$$2 : .  (5)

	.  reduce 5

	$$2  goto 14


state 9
	prog : $$1 dList . main  (2)

	VOID  shift 15
	.  error

	main  goto 16


state 10
	dList : decl . dList  (3)
	dList : .  (4)

	INT  shift 3
	DOUBLE  shift 4
	BOOL  shift 5
	DECSTRUCT  shift 6
	FUNC  shift 7
	VOID  reduce 4

	type  goto 8
	dList  goto 17
	decl  goto 10


state 11
	decl : DECSTRUCT $$3 . id '{' $$4 dListStruct '}' ';'  (9)

	IDENT  shift 18
	.  error

	id  goto 19


state 12
	decl : FUNC VOID . $$10 id '(' $$11 lparam ')' '{' $$12 corpoF $$13 '}'  (20)
	$$10 : .  (16)

	.  reduce 16

	$$10  goto 20


state 13
	decl : FUNC type . $$5 id '(' $$6 lparam ')' '{' $$7 corpoF RETURN exp $$8 ';' $$9 '}'  (15)
	$$5 : .  (10)

	.  reduce 10

	$$5  goto 21


state 14
	decl : type $$2 . Lid ';'  (6)

	IDENT  shift 18
	.  error

	id  goto 22
	Lid  goto 23


state 15
	main : VOID . MAIN '(' ')' $$17 bloco  (44)

	MAIN  shift 24
	.  error


state 16
	prog : $$1 dList main .  (2)

	.  reduce 2


state 17
	dList : decl dList .  (3)

	.  reduce 3


state 18
	id : IDENT .  (39)

	.  reduce 39


state 19
	decl : DECSTRUCT $$3 id . '{' $$4 dListStruct '}' ';'  (9)

	'{'  shift 25
	.  error


state 20
	decl : FUNC VOID $$10 . id '(' $$11 lparam ')' '{' $$12 corpoF $$13 '}'  (20)

	IDENT  shift 18
	.  error

	id  goto 26


state 21
	decl : FUNC type $$5 . id '(' $$6 lparam ')' '{' $$7 corpoF RETURN exp $$8 ';' $$9 '}'  (15)

	IDENT  shift 18
	.  error

	id  goto 27


state 22
	Lid : id .  (22)

	.  reduce 22


state 23
	decl : type $$2 Lid . ';'  (6)
	Lid : Lid . ',' id  (21)

	';'  shift 28
	','  shift 29
	.  error


state 24
	main : VOID MAIN . '(' ')' $$17 bloco  (44)

	'('  shift 30
	.  error


state 25
	decl : DECSTRUCT $$3 id '{' . $$4 dListStruct '}' ';'  (9)
	$$4 : .  (8)

	.  reduce 8

	$$4  goto 31


state 26
	decl : FUNC VOID $$10 id . '(' $$11 lparam ')' '{' $$12 corpoF $$13 '}'  (20)

	'('  shift 32
	.  error


state 27
	decl : FUNC type $$5 id . '(' $$6 lparam ')' '{' $$7 corpoF RETURN exp $$8 ';' $$9 '}'  (15)

	'('  shift 33
	.  error


state 28
	decl : type $$2 Lid ';' .  (6)

	.  reduce 6


state 29
	Lid : Lid ',' . id  (21)

	IDENT  shift 18
	.  error

	id  goto 34


state 30
	main : VOID MAIN '(' . ')' $$17 bloco  (44)

	')'  shift 35
	.  error


state 31
	decl : DECSTRUCT $$3 id '{' $$4 . dListStruct '}' ';'  (9)

	INT  shift 3
	DOUBLE  shift 4
	BOOL  shift 5
	.  error

	type  goto 36
	dListStruct  goto 37


state 32
	decl : FUNC VOID $$10 id '(' . $$11 lparam ')' '{' $$12 corpoF $$13 '}'  (20)
	$$11 : .  (17)

	.  reduce 17

	$$11  goto 38


state 33
	decl : FUNC type $$5 id '(' . $$6 lparam ')' '{' $$7 corpoF RETURN exp $$8 ';' $$9 '}'  (15)
	$$6 : .  (11)

	.  reduce 11

	$$6  goto 39


state 34
	Lid : Lid ',' id .  (21)

	.  reduce 21


state 35
	main : VOID MAIN '(' ')' . $$17 bloco  (44)
	$$17 : .  (43)

	.  reduce 43

	$$17  goto 40


state 36
	dListStruct : type . $$16 LidL ';'  (34)
	$$16 : .  (33)

	.  reduce 33

	$$16  goto 41


state 37
	decl : DECSTRUCT $$3 id '{' $$4 dListStruct . '}' ';'  (9)
	dListStruct : dListStruct . type $$15 LidL ';'  (32)

	INT  shift 3
	DOUBLE  shift 4
	BOOL  shift 5
	'}'  shift 42
	.  error

	type  goto 43


state 38
	decl : FUNC VOID $$10 id '(' $$11 . lparam ')' '{' $$12 corpoF $$13 '}'  (20)
	lparam : .  (25)

	INT  shift 3
	DOUBLE  shift 4
	BOOL  shift 5
	')'  reduce 25
	','  reduce 25

	type  goto 44
	lparam  goto 45
	param  goto 46


state 39
	decl : FUNC type $$5 id '(' $$6 . lparam ')' '{' $$7 corpoF RETURN exp $$8 ';' $$9 '}'  (15)
	lparam : .  (25)

	INT  shift 3
	DOUBLE  shift 4
	BOOL  shift 5
	')'  reduce 25
	','  reduce 25

	type  goto 44
	lparam  goto 47
	param  goto 46


state 40
	main : VOID MAIN '(' ')' $$17 . bloco  (44)

	'{'  shift 48
	.  error

	bloco  goto 49


state 41
	dListStruct : type $$16 . LidL ';'  (34)

	IDENT  shift 50
	.  error

	LidL  goto 51
	idL  goto 52


state 42
	decl : DECSTRUCT $$3 id '{' $$4 dListStruct '}' . ';'  (9)

	';'  shift 53
	.  error


state 43
	dListStruct : dListStruct type . $$15 LidL ';'  (32)
	$$15 : .  (31)

	.  reduce 31

	$$15  goto 54


state 44
	param : type . $$14 idP  (27)
	$$14 : .  (26)

	.  reduce 26

	$$14  goto 55


state 45
	decl : FUNC VOID $$10 id '(' $$11 lparam . ')' '{' $$12 corpoF $$13 '}'  (20)
	lparam : lparam . ',' param  (23)

	')'  shift 56
	','  shift 57
	.  error


state 46
	lparam : param .  (24)

	.  reduce 24


state 47
	decl : FUNC type $$5 id '(' $$6 lparam . ')' '{' $$7 corpoF RETURN exp $$8 ';' $$9 '}'  (15)
	lparam : lparam . ',' param  (23)

	')'  shift 58
	','  shift 57
	.  error


state 48
	bloco : '{' . listacmd '}'  (45)
	listacmd : .  (47)

	.  reduce 47

	listacmd  goto 59


state 49
	main : VOID MAIN '(' ')' $$17 bloco .  (44)

	.  reduce 44


state 50
	idL : IDENT .  (37)

	.  reduce 37


state 51
	dListStruct : type $$16 LidL . ';'  (34)
	LidL : LidL . ',' idL  (35)

	';'  shift 60
	','  shift 61
	.  error


state 52
	LidL : idL .  (36)

	.  reduce 36


state 53
	decl : DECSTRUCT $$3 id '{' $$4 dListStruct '}' ';' .  (9)

	.  reduce 9


state 54
	dListStruct : dListStruct type $$15 . LidL ';'  (32)

	IDENT  shift 50
	.  error

	LidL  goto 62
	idL  goto 52


state 55
	param : type $$14 . idP  (27)

	IDENT  shift 63
	.  error

	idP  goto 64


state 56
	decl : FUNC VOID $$10 id '(' $$11 lparam ')' . '{' $$12 corpoF $$13 '}'  (20)

	'{'  shift 65
	.  error


state 57
	lparam : lparam ',' . param  (23)

	INT  shift 3
	DOUBLE  shift 4
	BOOL  shift 5
	.  error

	type  goto 44
	param  goto 66


state 58
	decl : FUNC type $$5 id '(' $$6 lparam ')' . '{' $$7 corpoF RETURN exp $$8 ';' $$9 '}'  (15)

	'{'  shift 67
	.  error


state 59
	bloco : '{' listacmd . '}'  (45)
	listacmd : listacmd . cmd  (46)

	IDENT  shift 68
	NUM  shift 69
	IF  shift 70
	STRUCT  shift 71
	'}'  shift 72
	'('  shift 73
	.  error

	exp  goto 74
	cmd  goto 75


state 60
	dListStruct : type $$16 LidL ';' .  (34)

	.  reduce 34


state 61
	LidL : LidL ',' . idL  (35)

	IDENT  shift 50
	.  error

	idL  goto 76


state 62
	dListStruct : dListStruct type $$15 LidL . ';'  (32)
	LidL : LidL . ',' idL  (35)

	';'  shift 77
	','  shift 61
	.  error


state 63
	idP : IDENT .  (38)

	.  reduce 38


state 64
	param : type $$14 idP .  (27)

	.  reduce 27


state 65
	decl : FUNC VOID $$10 id '(' $$11 lparam ')' '{' . $$12 corpoF $$13 '}'  (20)
	$$12 : .  (18)

	.  reduce 18

	$$12  goto 78


state 66
	lparam : lparam ',' param .  (23)

	.  reduce 23


state 67
	decl : FUNC type $$5 id '(' $$6 lparam ')' '{' . $$7 corpoF RETURN exp $$8 ';' $$9 '}'  (15)
	$$7 : .  (12)

	.  reduce 12

	$$7  goto 79


state 68
	exp : IDENT .  (55)
	exp : IDENT . $$19 '.' IDENT  (61)
	exp : IDENT . '(' $$20 pexp ')'  (63)
	$$19 : .  (60)

	'('  shift 80
	AND  reduce 55
	'='  reduce 55
	'>'  reduce 55
	'+'  reduce 55
	'['  reduce 55
	';'  reduce 55
	')'  reduce 55
	','  reduce 55
	']'  reduce 55
	'.'  reduce 60

	$$19  goto 81


state 69
	exp : NUM .  (53)

	.  reduce 53


state 70
	cmd : IF . '(' exp ')' cmd  (49)

	'('  shift 82
	.  error


state 71
	exp : STRUCT . IDENT $$18 IDENT  (59)

	IDENT  shift 83
	.  error


state 72
	bloco : '{' listacmd '}' .  (45)

	.  reduce 45


state 73
	exp : '(' . exp ')'  (54)

	IDENT  shift 68
	NUM  shift 69
	STRUCT  shift 71
	'('  shift 73
	.  error

	exp  goto 84


state 74
	cmd : exp . ';'  (48)
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : exp . '=' exp  (56)
	exp : exp . '[' exp ']'  (57)

	AND  shift 85
	'='  shift 86
	'>'  shift 87
	'+'  shift 88
	'['  shift 89
	';'  shift 90
	.  error


state 75
	listacmd : listacmd cmd .  (46)

	.  reduce 46


state 76
	LidL : LidL ',' idL .  (35)

	.  reduce 35


state 77
	dListStruct : dListStruct type $$15 LidL ';' .  (32)

	.  reduce 32


state 78
	decl : FUNC VOID $$10 id '(' $$11 lparam ')' '{' $$12 . corpoF $$13 '}'  (20)
	corpoF : .  (30)

	.  reduce 30

	corpoF  goto 91


state 79
	decl : FUNC type $$5 id '(' $$6 lparam ')' '{' $$7 . corpoF RETURN exp $$8 ';' $$9 '}'  (15)
	corpoF : .  (30)

	.  reduce 30

	corpoF  goto 92


state 80
	exp : IDENT '(' . $$20 pexp ')'  (63)
	$$20 : .  (62)

	.  reduce 62

	$$20  goto 93


state 81
	exp : IDENT $$19 . '.' IDENT  (61)

	'.'  shift 94
	.  error


state 82
	cmd : IF '(' . exp ')' cmd  (49)

	IDENT  shift 68
	NUM  shift 69
	STRUCT  shift 71
	'('  shift 73
	.  error

	exp  goto 95


state 83
	exp : STRUCT IDENT . $$18 IDENT  (59)
	$$18 : .  (58)

	.  reduce 58

	$$18  goto 96


state 84
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : '(' exp . ')'  (54)
	exp : exp . '=' exp  (56)
	exp : exp . '[' exp ']'  (57)

	AND  shift 85
	'='  shift 86
	'>'  shift 87
	'+'  shift 88
	'['  shift 89
	')'  shift 97
	.  error


state 85
	exp : exp AND . exp  (52)

	IDENT  shift 68
	NUM  shift 69
	STRUCT  shift 71
	'('  shift 73
	.  error

	exp  goto 98


state 86
	exp : exp '=' . exp  (56)

	IDENT  shift 68
	NUM  shift 69
	STRUCT  shift 71
	'('  shift 73
	.  error

	exp  goto 99


state 87
	exp : exp '>' . exp  (51)

	IDENT  shift 68
	NUM  shift 69
	STRUCT  shift 71
	'('  shift 73
	.  error

	exp  goto 100


state 88
	exp : exp '+' . exp  (50)

	IDENT  shift 68
	NUM  shift 69
	STRUCT  shift 71
	'('  shift 73
	.  error

	exp  goto 101


state 89
	exp : exp '[' . exp ']'  (57)

	IDENT  shift 68
	NUM  shift 69
	STRUCT  shift 71
	'('  shift 73
	.  error

	exp  goto 102


state 90
	cmd : exp ';' .  (48)

	.  reduce 48


91: shift/reduce conflict (shift 3, reduce 47) on INT
91: shift/reduce conflict (shift 4, reduce 47) on DOUBLE
91: shift/reduce conflict (shift 5, reduce 47) on BOOL
91: reduce/reduce conflict (reduce 19, reduce 47) on '}'
state 91
	decl : FUNC VOID $$10 id '(' $$11 lparam ')' '{' $$12 corpoF . $$13 '}'  (20)
	corpoF : corpoF . listacmd  (28)
	corpoF : corpoF . dListStruct  (29)
	$$13 : .  (19)
	listacmd : .  (47)

	INT  shift 3
	DOUBLE  shift 4
	BOOL  shift 5
	IDENT  reduce 47
	NUM  reduce 47
	IF  reduce 47
	STRUCT  reduce 47
	'}'  reduce 19
	'('  reduce 47

	type  goto 36
	dListStruct  goto 103
	$$13  goto 104
	listacmd  goto 105


92: shift/reduce conflict (shift 3, reduce 47) on INT
92: shift/reduce conflict (shift 4, reduce 47) on DOUBLE
92: shift/reduce conflict (shift 5, reduce 47) on BOOL
92: shift/reduce conflict (shift 106, reduce 47) on RETURN
state 92
	decl : FUNC type $$5 id '(' $$6 lparam ')' '{' $$7 corpoF . RETURN exp $$8 ';' $$9 '}'  (15)
	corpoF : corpoF . listacmd  (28)
	corpoF : corpoF . dListStruct  (29)
	listacmd : .  (47)

	INT  shift 3
	DOUBLE  shift 4
	BOOL  shift 5
	RETURN  shift 106
	IDENT  reduce 47
	NUM  reduce 47
	IF  reduce 47
	STRUCT  reduce 47
	'('  reduce 47

	type  goto 36
	dListStruct  goto 103
	listacmd  goto 105


state 93
	exp : IDENT '(' $$20 . pexp ')'  (63)

	IDENT  shift 68
	NUM  shift 69
	STRUCT  shift 71
	'('  shift 73
	.  error

	exp  goto 107
	pexp  goto 108


state 94
	exp : IDENT $$19 '.' . IDENT  (61)

	IDENT  shift 109
	.  error


state 95
	cmd : IF '(' exp . ')' cmd  (49)
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : exp . '=' exp  (56)
	exp : exp . '[' exp ']'  (57)

	AND  shift 85
	'='  shift 86
	'>'  shift 87
	'+'  shift 88
	'['  shift 89
	')'  shift 110
	.  error


state 96
	exp : STRUCT IDENT $$18 . IDENT  (59)

	IDENT  shift 111
	.  error


state 97
	exp : '(' exp ')' .  (54)

	.  reduce 54


state 98
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : exp AND exp .  (52)
	exp : exp . '=' exp  (56)
	exp : exp . '[' exp ']'  (57)

	'['  shift 89
	AND  reduce 52
	'='  reduce 52
	'>'  reduce 52
	'+'  reduce 52
	';'  reduce 52
	')'  reduce 52
	','  reduce 52
	']'  reduce 52


state 99
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : exp . '=' exp  (56)
	exp : exp '=' exp .  (56)
	exp : exp . '[' exp ']'  (57)

	AND  shift 85
	'='  shift 86
	'>'  shift 87
	'+'  shift 88
	'['  shift 89
	';'  reduce 56
	')'  reduce 56
	','  reduce 56
	']'  reduce 56


state 100
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp '>' exp .  (51)
	exp : exp . AND exp  (52)
	exp : exp . '=' exp  (56)
	exp : exp . '[' exp ']'  (57)

	AND  shift 85
	'+'  shift 88
	'['  shift 89
	'='  reduce 51
	';'  reduce 51
	')'  reduce 51
	','  reduce 51
	']'  reduce 51


state 101
	exp : exp . '+' exp  (50)
	exp : exp '+' exp .  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : exp . '=' exp  (56)
	exp : exp . '[' exp ']'  (57)

	AND  shift 85
	'['  shift 89
	'='  reduce 50
	'>'  reduce 50
	'+'  reduce 50
	';'  reduce 50
	')'  reduce 50
	','  reduce 50
	']'  reduce 50


state 102
	exp : exp . '+' exp  (50)
	exp : exp . '>' exp  (51)
	exp : exp . AND exp  (52)
	exp : exp . '=' exp  (56)
	exp : exp . '[' exp ']'  (57)
	exp : exp '[' exp . ']'  (57)

	AND  shift 85
	'='  shift 86
	'>'  shift 87
	'+'  shift 88
	'['  shift 89
	']'  shift 112
	.  error

